--- a/bot/package.json
+++ b/bot/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js"
+    "dev": "nodemon start.js",
+    "start": "node start.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "ngrok": "^5.0.0-beta.2",
     "node-telegram-bot-api": "^0.66.0",
     "nodemon": "^3.1.10",
     "pg": "^8.16.0",
